# ecommerce

./: .dockerignore  .gitignore  Dockerfile  architecture.md  compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 3e979d68b72d_make_users_last_login_nullable.py  63398111f66e_initial_db.py  6ea6dd835b31_create_user_table.py  74fc1a34d09a_initial_schema.py  f4f513896fdb_create_order_and_payment_models.py
src/: config.py  db.py  main.py  utils.py
src/auth/: config.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py  utils.py
src/cart/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/orders/: models.py
src/payments/: models.py
src/products/: dependencies.py  exception.py  models.py  repository.py  router.py  schemas.py  service.py
src/products/api/: categories.py  products.py
tests/: conftest.py
tests/auth/: test_router.py
tests/integration/auth/: conftest.py  test_router.py
tests/unit/auth/: conftest.py  test_auth_service.py  test_user_repository.py  test_user_service.py
